--- a/DocGen/DocGen.Data/DocGen.Data.csproj
+++ b/DocGen/DocGen.Data/DocGen.Data.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\Entity.cs" />
     <Compile Include="Model\Location.cs" />
     <Compile Include="Model\DateTimeInterval.cs" />
     <Compile Include="Model\Zone.cs" />
