[add GU interface for representing Sector Orders]

--- a/DocGen/DocGen.Data/DocGen.Data.csproj
+++ b/DocGen/DocGen.Data/DocGen.Data.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model\Entity.cs" />
+    <Compile Include="Model\SectorItem.cs" />
     <Compile Include="Model\Location.cs" />
     <Compile Include="Model\DateTimeInterval.cs" />
     <Compile Include="Model\Zone.cs" />
