--- a/DocGen/DocGen.Desktop/DocGen.Desktop.csproj
+++ b/DocGen/DocGen.Desktop/DocGen.Desktop.csproj
@@ -47,6 +47,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DialogBox.cs" />
+    <Compile Include="EditInactiveForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditInactiveForm.Designer.cs">
+      <DependentUpon>EditInactiveForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -61,12 +67,21 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="InactiveForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="InactiveForm.Designer.cs">
+      <DependentUpon>InactiveForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="SectorForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="SectorForm.Designer.cs">
       <DependentUpon>SectorForm.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="EditInactiveForm.resx">
+      <DependentUpon>EditInactiveForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -82,9 +97,13 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="InactiveForm.resx">
+      <DependentUpon>InactiveForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="SectorForm.resx">
       <DependentUpon>SectorForm.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="Properties\DataSources\DocGen.Data.Model.InactiveItem.datasource" />
     <None Include="Properties\DataSources\DocGen.Data.Model.SectorItem.datasource" />
     <None Include="Properties\DataSources\SectorGridDataSourceItem.datasource" />
     <None Include="Properties\Settings.settings">
