--- a/DocGen/DocGen.Desktop/DocGen.Desktop.csproj
+++ b/DocGen/DocGen.Desktop/DocGen.Desktop.csproj
@@ -53,6 +53,12 @@
     <Compile Include="EditInactiveForm.Designer.cs">
       <DependentUpon>EditInactiveForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="ExcludePersonForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ExcludePersonForm.Designer.cs">
+      <DependentUpon>ExcludePersonForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -81,6 +87,9 @@
     </Compile>
     <EmbeddedResource Include="EditInactiveForm.resx">
       <DependentUpon>EditInactiveForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ExcludePersonForm.resx">
+      <DependentUpon>ExcludePersonForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
